--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ dist/
 build/
 orchestrator/data/*.db
 orchestrator/data/reports/*.json
+orchestrator/data/task_packets/*.json
 workspaces/
+.agentpr_runtime/
+.tmp_vendor_skills/
