--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,19 @@ AGENTPR_TELEGRAM_NL_MODEL=gpt-4o-mini
 AGENTPR_TELEGRAM_NL_API_BASE=
 AGENTPR_TELEGRAM_NL_API_KEY_ENV=AGENTPR_MANAGER_API_KEY
 AGENTPR_TELEGRAM_NL_TIMEOUT_SEC=20
+AGENTPR_TELEGRAM_NOTIFY_ENABLED=1
+AGENTPR_TELEGRAM_NOTIFY_SCAN_SEC=30
+AGENTPR_TELEGRAM_NOTIFY_SCAN_LIMIT=200
 
 # Manager LLM (manager loop + NL router fallback defaults)
 AGENTPR_MANAGER_API_KEY=
 AGENTPR_MANAGER_MODEL=gpt-4o-mini
 AGENTPR_MANAGER_API_BASE=https://api.openai.com/v1
+
+# Worker base prompt (used by manager-tick/run-manager-loop when --prompt-file is omitted)
+AGENTPR_WORKER_PROMPT_FILE=forge_integration/claude_code_prompt.md
+AGENTPR_DEFAULT_PROMPT_VERSION=v1
+AGENTPR_CREATE_AUTOKICK=1
 
 # GitHub webhook
 AGENTPR_GITHUB_WEBHOOK_SECRET=
