upadte for skills and fix pipeline

--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,12 @@ AGENTPR_CREATE_AUTOKICK=1
 # GitHub webhook
 AGENTPR_GITHUB_WEBHOOK_SECRET=
 
+# Forge provider for codex worker (optional)
+# If both BASE_URL and API_KEY are set, codex uses Forge instead of default provider.
+# If unset, codex uses ~/.codex/config.toml defaults (e.g. OpenAI).
+AGENTPR_FORGE_BASE_URL=
+AGENTPR_FORGE_API_KEY=
+AGENTPR_FORGE_MODEL=
+
 # Optional codex binary override
 AGENTPR_CODEX_BIN=
